# todo-leptos-seaorm

./: .dockerignore  .env.docker  .gitignore  Cargo.toml  Dockerfile  README.md  package.json  pnpm-lock.yaml
app/: Cargo.toml
app/src/: app.rs  lib.rs
app/src/common/: api_error.rs  app_state.rs  mod.rs  security_context.rs  validate_helper.rs
app/src/components/layout/: message_banner.rs  mod.rs  navbar.rs
app/src/components/ui/: button.rs  button_link.rs  checkbox.rs  checkbox_with_label.rs  main_title.rs  mod.rs  select_input.rs  select_with_error.rs  text_area.rs  text_with_error.rs
app/src/database/: tasks.rs
app/src/domain/: mod.rs
app/src/domain/home/routing/: home_page.rs  mod.rs  routes.rs
app/src/domain/task/: mod.rs  task_db.rs  task_services.rs
app/src/domain/task/components/: mod.rs  tasks_list.rs  tasks_panel.rs
app/src/domain/task/model/: task.rs
app/src/domain/task/routing/: mod.rs  routes.rs  task_edit_page.rs  task_page.rs
app/src/domain/user/: mod.rs  user_db.rs  user_services.rs
app/src/domain/user/model/: create_user_params.rs  login_params.rs  mod.rs  user.rs
app/src/domain/user/routing/: create_user_page.rs  login_page.rs  mod.rs  routes.rs
end2end/tests/: example.spec.ts
server/: Cargo.toml
server/migrations/postgres/: 01_create_tables.sql
server/migrations/sqlite/: 01_create_tables.sql
server/src/: db.rs  main.rs
server/src/app_router/: build_app_router.rs
src-tauri/: Cargo.toml
src-tauri/src/: main.rs
style/: tailwind.css
